--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-        
     <wb-module deploy-name="RuayProject">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-                
         <property name="context-root" value="RuayProject"/>
-                
-        <property name="java-output-path" value="/RuayProject/build/classes"/>
-            
+        <property name="java-output-path" value="/RuayProject/target/classes"/>
     </wb-module>
-    
 </project-modules>
